Make TorrentFileParserImpl reusable and thread safe