@@ -3,30 +3,26 @@ package com.robothaver.torrentfileparser;
 import com.robothaver.torrentfileparser.domain.Torrent;
 import com.robothaver.torrentfileparser.exception.MalformedTorrentFileException;
 import com.robothaver.torrentfileparser.parser.TorrentFileParser;
+import com.robothaver.torrentfileparser.parser.TorrentFileParserImpl;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.time.Instant;
 
 public class Main {
-    public static void main(String[] args) {
-        Path path = Paths.get("Path to torrent file");
-        try {
-            byte[] bytes = Files.readAllBytes(path);
-            Instant start = Instant.now();
+    public static void main(String[] args) throws IOException, MalformedTorrentFileException {
+        Path path = Path.of("Path to torrent file");
+        byte[] bytes = Files.readAllBytes(path);
+        Instant start = Instant.now();
 
-            TorrentFileParser torrentParser = new TorrentFileParser(bytes, true);
-            Torrent torrent = torrentParser.parseToTorrent();
-            System.out.println(torrent.getName());
+        TorrentFileParser torrentParser = new TorrentFileParserImpl();
+        Torrent torrent = torrentParser.parseToTorrent(bytes, true);
+        Instant finish = Instant.now();
 
-            Instant finish = Instant.now();
-            long timeElapsed = Duration.between(start, finish).toMillis();
-            System.out.println("Parsing finished in " + timeElapsed + "ms");
-        } catch (IOException | MalformedTorrentFileException e) {
-            throw new RuntimeException(e);
-        }
+        System.out.println(torrent.getName());
+        long timeElapsed = Duration.between(start, finish).toMillis();
+        System.out.println("Parsing finished in " + timeElapsed + "ms");
     }
 }
